--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clinic",
+  "name": "hotel",
   "version": "1.0.0",
   "description": "A simple business card website made with gulp assembly",
   "main": "index.js",
